base/fe/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-pawn-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pawn-serivce-app
      tier: frontend
  template:
    metadata:
      labels:
        app: pawn-serivce-app
        tier: frontend
    spec:
      containers:
        - name: fe-pawn-service-container
          image: anhmai7777/pawn-service-fe
          ports:
            - containerPort: 80
