base/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-pawn-service
spec:
  type: ClusterIP
  selector:
    app: pawn-serivce-app
    tier: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
