base/fe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-pawn-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "fe-pawn.dev.localhost"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fe-pawn-service
                port:
                  number: 80
